# api/controller/word_controller.go
@@ -166,36 +166,6 @@ func (wc *WordController) DeleteWord(c *gin.Context) {
 }
 
 
-// UpdateWord godoc
-// @Summary Edit Kosakata
-// @Description Memperbarui data kosakata, kategori, dan contoh kalimat
-// @Tags Words
-// @Security ApiKeyAuth
-// @Accept json
-// @Produce json
-// @Param id path string true "ID Kosakata"
-// @Param request body dto.CreateWordRequest true "Data Kosakata yang Diupdate"
-// @Success 200 {object} domain.SuccessResponse
-// @Failure 400 {object} domain.ErrorResponse
-// @Router /words/{id} [put]
-func (wc *WordController) UpdateWord(c *gin.Context) {
-	userID := c.GetString("x-user-id")
-	wordID := c.Param("id")
-	var request dto.CreateWordRequest
-
-	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, domain.ErrorResponse{Message: err.Error()})
-		return
-	}
-
-	if err := wc.WordUsecase.UpdateWord(c.Request.Context(), wordID, userID, &request); err != nil {
-		c.JSON(http.StatusInternalServerError, domain.ErrorResponse{Message: "Gagal memperbarui kosakata"})
-		return
-	}
-
-	c.JSON(http.StatusOK, domain.SuccessResponse{Message: "Kosakata berhasil diperbarui"})
-}
-
 
 // GetWordTypes godoc
 // @Summary Ambil Daftar Part of Speech
@@ -215,4 +185,34 @@ func (wc *WordController) GetWordTypes(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, responses)
+}
+
+// UpdateWord godoc
+// @Summary Edit Kosakata
+// @Description Memperbarui data kosakata, kategori, dan contoh kalimat
+// @Tags Words
+// @Security ApiKeyAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID Kosakata"
+// @Param request body dto.UpdateWordRequest true "Data Kosakata yang Diupdate"
+// @Success 200 {object} domain.SuccessResponse
+// @Failure 400 {object} domain.ErrorResponse
+// @Router /words/{id} [put]
+func (wc *WordController) UpdateWord(c *gin.Context) {
+	userID := c.GetString("x-user-id")
+	wordID := c.Param("id")
+	var request dto.UpdateWordRequest // Harus UpdateWordRequest
+
+	if err := c.ShouldBindJSON(&request); err != nil {
+		c.JSON(http.StatusBadRequest, domain.ErrorResponse{Message: err.Error()})
+		return
+	}
+
+	if err := wc.WordUsecase.UpdateWord(c.Request.Context(), wordID, userID, &request); err != nil {
+		c.JSON(http.StatusInternalServerError, domain.ErrorResponse{Message: "Gagal memperbarui kosakata"})
+		return
+	}
+
+	c.JSON(http.StatusOK, domain.SuccessResponse{Message: "Kosakata berhasil diperbarui"})
 }
